# dynamic-airflow-dag

./: .gitignore  Dockerfile  README.md  airflow.sh  colima.sh  conf.json  dags.http  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: dummy_1.py  dummy_10.py  dummy_11.py  dummy_12.py  dummy_2.py  dummy_3.py  dummy_4.py  dummy_5.py  dummy_6.py  dummy_7.py  dummy_8.py  dummy_9.py
dags/my_dag/: main.py
dags/my_dag/configuration/: conf.json  dag.yaml  groups.json  links.json  subgroups.json  tasks.json
dags/orchestrator/: main.py  main_1min.py  main_5min.py
dags/orchestrator/configuration/: conf.json  dag.yaml  dag_1min.yaml  dag_5min.yaml
k8s/: airflow-cli-deployment.yaml  airflow-init-deployment.yaml  airflow-scheduler-deployment.yaml  airflow-triggerer-deployment.yaml  airflow-webserver-deployment.yaml  airflow-webserver-service.yaml  airflow-worker-deployment.yaml  flower-deployment.yaml  flower-service.yaml  local-airflow-default-networkpolicy.yaml  postgres-deployment.yaml  redis-deployment.yaml  redis-service.yaml
