[tool.poetry]
name = "local-airflow"
version = "0.1.0"
description = "Environment for testing and development purposes."
authors = ["gagocaan <gagocaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.7.1"
hydra-core = "^1.3.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
